zirgen/dsl/test/repro/back_op_non_subcomponent.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s

component TestMap() {
  // CHECK:      error: back operation must apply to a component with a layout,
  // CHECK-SAME: but `Val` does not have a layout
  for i : 0..3 { i @ 2 }
}

